ocp-files/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  template:
    spec:
      containers:
      - image: spring-petclinic 
        imagePullPolicy: Always
        name: spring-petclinic
        resources:
          requests:
            memory: 600Mi
            cpu: 100m
          limits:
            memory: 800Mi
            cpu: 200m
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 10
