ocp-files/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  ports:
  - name: 8080-8080
    port: 8080
