ocp-files/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-petclinic
spec:
  port:
    targetPort: 8080-8080
  tls:
    termination: edge
  to:
    kind: Service
    name: spring-petclinic
